# libjwt-typed

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  README.md  libjwt-typed.cabal  stack.nightly.yaml  stack.yaml
app/jwtgen/: Main.hs
bench/: Algorithms.hs  Benchmarks.hs  Env.hs
bench/Benchmarks/: Data.hs  Jose.hs  Libjwt.hs
bench/results/nightly-2020-08-16/: decoding-ECDSA256.html  decoding-ECDSA512.html  decoding-HMAC512.html  decoding-RSA512.html  encoding-ECDSA256.html  encoding-ECDSA512.html  encoding-HMAC512.html  encoding-RSA512.html
bench/results/nightly-2020-09-16/: decoding-ECDSA256.html  decoding-ECDSA512.html  decoding-HMAC512.html  decoding-RSA512.html  encoding-ECDSA512.html  signing-ECDSA256.html  signing-HMAC512.html  signing-RSA512.html
src/: Libjwt.hs
src/Libjwt/: ASCII.hs  Algorithms.hs  Classes.hs  Decoding.hs  Encoding.hs  Exceptions.hs  Flag.hs  Header.hs  JsonByteString.hs  Jwt.hs  JwtValidation.hs  Keys.hs  NumericDate.hs  Payload.hs  PrivateClaims.hs  RegisteredClaims.hs
src/Libjwt/FFI/: Jsmn.hsc  Jwt.hs  Libjwt.hsc
src/Web/: Libjwt.hs
src/Web/Libjwt/: Tutorial.hs
src/cbits/: HsJsonTokenizer.c
test/: Env.hs  Generators.hs  Properties.hs  Spec.hs
test/Interop/: JWTDecoding.hs  JWTEncoding.hs  JWTHelpers.hs
