cabal-version:       2.4
name:                libjwt-typed
version:             0.1
synopsis:            A typesafe and idiomatic Haskell wrapper over libjwt
description:         A typesafe and idiomatic Haskell wrapper over libjwt
homepage:            https://github.com/marcin-rzeznicki/libjwt-typed
bug-reports:         https://github.com/marcin-rzeznicki/libjwt-typed/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Marcin Rzeźnicki
maintainer:          Marcin Rzeźnicki <marcin.rzeznicki@gmail.com>
copyright:           2020 Marcin Rzeźnicki
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/marcin-rzeznicki/libjwt-typed.git

common common-options
  build-depends:       base >= 4.13.0.0 && < 4.15,
                       bytestring ^>= 0.10.10.0,
                       exceptions ==0.10.4,
                       transformers ^>= 0.5.6.2,
                       uuid >= 1.3,
                       time >=1.9 && < 1.10
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -fdefer-typed-holes 
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  build-depends:       unordered-containers ^>= 0.2.10.0,
                       utf8-string ^>= 1.0.1.1,
                       monad-extras ^>= 0.6.0,
                       data-default >= 0.2 && < 1.0,
                       monad-time ==0.3.*,
                       proxied ==0.3.*,
                       casing ^>= 0.1.4.1
  exposed-modules:     Libjwt
                       Libjwt.Header
                       Libjwt.RegisteredClaims
                       Libjwt.Payload
                       Libjwt.ASCII
                       Libjwt.NumericDate
                       Libjwt.Flag
                       Libjwt.PrivateClaims
                       Libjwt.Encoding
                       Libjwt.Decoding
                       Libjwt.FFI.Jwt
                       Libjwt.FFI.Json
  other-modules:       Libjwt.FFI.Jansson
  ghc-options:         -fprint-explicit-kinds

executable jwtgen
  import:              common-options
  hs-source-dirs:      app/jwtgen
  main-is:             Main.hs
  build-depends:       libjwt-typed
  ghc-options:         -O1
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       
executable jwtauth
  import:              common-options
  hs-source-dirs:      app/jwtauth
  main-is:             Main.hs
  build-depends:       libjwt-typed
  ghc-options:         -O1
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite libjwt-typed-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       libjwt-typed
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
